# PRG1_Recueil_Exercices

./: CMakeLists.txt  README.md  quadraticSolver.cpp
01 - Introduction/: 02-01 - code C++.md  03-01 - cycle de developpement.md  04-01 - erreur de compilation.md  04-02 - segmentation fault.md  04-03 - uncaught exception.md  ex04.cpp  ex04_b.cpp
02 - Elements de base/: 01-01 - identificateurs.md  01-02 - declaration de variables.md  02-01 - types de base - auto.md  03-01 - operateurs.md  03-02 - division entiere reelle.md  03-03 - modulo.md  03-04 - evaluation expressions.md  03-05 - comparaison strings.md  03-06 - operateurs logiques.md  03-07 - operations sur char.md  03-08 - concatenation des strings.md  04-01 - pointeurs et const.md  bouteille.cpp  piedsMiles.cpp
03 - Structures de Controle/: 01-01 - tests equivalents.md  01-02 - opérateur ternaire (1).md  lieferungCHF.cpp  ppmc.cpp  starryChrismas.cpp
04 - Fonctions/: bank.cpp  bornes.cpp  charTest.cpp  pyramideRectangulaire.cpp
05 - Flux/: CAGR.cpp  fileText.cpp
05 - Flux/CSV_CAGR/: SPY_daily_marketwatch.csv
08 - Chaines de caracteres/: remplacerMot.cpp
09 - Tableaux/: 01-01 - déclaration d'arrays.md  01-02 - accès aux éléments.md  01-03 - parcours.md  01-04 - Comparaison de tableaux.md  01-06 - Calcul vectoriel.md  01-07 - stack.md  matrixVector.cpp  stack.cpp  vectorCalc.cpp
10 - Surcharge et Genericite/: 01-01 - surcharge.md  01-02 - surcharge (1 param).md  01-03 - surcharge (2 param).md  02-03 - que produisent ces codes.md  carnet.cpp  surSpec.cpp
11 - Classes/: Matrix.cpp
12 - iterator - algorithm - numeric/: counter.cpp
13 - classe generique/: 01-01 - classe Coord.md  02-01 - type generique - bataille navale.md  13-01-02 - classe Point.md  13-01-03 - classe Point - quadrant.md  champ.txt  genClass.cpp  genClassDot.cpp  quadDot.cpp  selfExercise.cpp  toucheCoule.cpp
99 - Exercices récapitulatifs/: README.md  image.cpp  stringTransform.cpp  stringVerif.cpp  vec3.cpp
